feat: add user login and workspace membership mechanism
